documents/24.03/开发指南.md
# SQL语法使用限制<a name="ZH-CN_TOPIC_0000001854778213"></a>

-   Cantian引擎不支持SQL语句：“ALTER INSTANCE“，CREATE/ALTER/DROP EVENT/SERVER/SRS/RESOURCE GROUP，IMPORT table，XA START/BEGIN/END/PREPARE/COMMIT/ROLLBACK/RECOVER。
-   通过SQL语句：“CREATE TABLE  _表名_   DATA DIRECTORY='_数据路径_';”指定表数据路径时不生效。原因是Cantian引擎默认将表数据存放在DBStor。
-   Cantian引擎在集群应用DDL需使用排他锁。因此不支持执行ALTER SQL语句指定“LOCK=NONE“或“LOCK=SHARE“。
-   Cantian引擎不支持在MySQL自带的系统表空间中执行DDL操作，MySQL自带的系统表空间在Cantian引擎中不存在。
-   当用户写数据至MySQL的系统数据库（information\_schema、mysql、performance\_schema、sys）时，需要在集群中所有节点执行写操作，否则集群数据将不一致。原因是MySQL的系统数据库未被Cantian引擎管理。
-   执行“LOCK INSTANCE FOR BACKUP“SQL语句后，所有实例将无法执行DDL。
-   JSON\_VALUE不支持的关键字包括：RETURNING SIGNED、RETURNING UNSIGNED、RETURNING DECIMAL、RETURNING FLOAT、RETURNING DOUBLE、RETURNING DATETIME、RETURNING TIME、RETURNING DATE。
-   Cantian引擎的外键必须建立在主键或者唯一索引之上。
-   单个表最多支持建立32个索引。
-   Cantian引擎仅需要加载ha\_ctc.[产品文档（合集）.md](..%2F24.06%2F%B2%FA%C6%B7%CE%C4%B5%B5%A3%A8%BA%CF%BC%AF%A3%A9.md)so，如需加载其他so，请先联系技术支持评估后再加载。

    INSTALL PLUGIN操作仅在单节点有效，若需加载插件在技术支持评估后由管理平台在所有节点上统一加载，避免部分节点加载，部分节点未加载的情况。

-   Cantian引擎不支持FullText字段。
-   Cantian引擎不支持Discard tablespace字段。
-   执行“Create user”SQL语句创建用户后，必须要给该用户赋予\(GRANT\)LOCK权限，才能进行集群DDL操作。创建用户后，用户需要有相应SQL语句的执行权限才可以执行操作。远端执行的Proxy用户在执行SQL语句时会有部分限制，无法执行时系统会报错。
-   Cantian引擎不支持对JSON类型的列创建索引，不支持多值索引（multi-valued indexes）。
-   不允许在非空表中添加非空（NOT NULL）且未指定默认值的列。
-   在数据库表中插入索引数据时，如果索引列默认值为NULL，插入多行数据时，会报重复索引的错误。
-   索引命名长度最大支持64个字节。
-   Cantian引擎不支持降序索引。
-   Cantian引擎索引函数只支持json_value、lower、upper、reverse、substr和abs。
-   执行FLUSH TABLE WITH READ LOCK全局读锁后，不支持新起会话执行set语句，执行会报错。
-   用户开启事务过程中，设置Cantian引擎的锁超时时间的操作是无效的，事务提交后可以通过语句“set @@CTC\_lock\_wait\_timeout=_锁超时时间\(单位是ms\)_；”正常设置。
-   Cantian引擎的行数据最大支持64000字节。
-   数据库名、表名、索引名最大长度为64字节。
-   分布式数据库自增值不保证单调连续，存在自增值跳变现象。
-   Cantian引擎使用自增主键时，如果显式指定自增值进行插入/更新操作可能会导致数据库集群其他节点后续插入空值时出现重复键值的现象，插件发现冲突后会报错处理。因此，不建议使用指定自增值的插入/更新方式。
-   当前支持的字符集与比较规则如下，对于目前没有处理的字符集，可能会出现特殊字符排序或内容匹配结果不一致：

    utf8mb4 - utf8mb4\_0900\_ai\_ci/utf8mb4\_0900\_bin/utf8mb4\_general\_ci/utf8mb4\_bin

    binary - binary

    latin1 - latin1\_general\_ci/latin1\_general\_cs/latin1\_bin

    ascii - ascii\_general\_ci/ascii\_bin

    gbk - gbk\_chinese\_ci/gbk\_bin

    utf8/utf8mb3 - utf8\_general\_ci/utf8\_bin/utf8mb3\_general\_ci/utf8mb3\_general\_ci

-   Cantian引擎不支持多重故障场景（指集群中叠加出现多个故障）的自动恢复，需要人工介入恢复。
-   Cantian引擎的外键需要建立在数据类型相同的列之上，如果两列数据类型不同，会报列类型不匹配的错误。
-   Cantian引擎不支持对函数索引调用到的列做rename操作。
-   重启其中一个MySQL节点会导致该节点上已修改的MySQL系统变量恢复默认值，而另外一个未重启的节点仍是修改后的值，该现象是MySQL自身的限制，不影响业务功能。
-   数据库下业务期间，不支持修改表结构（修改数据列，删除数据列）

# Cantian Connector接口说明<a name="ZH-CN_TOPIC_0000001808139372"></a>

ha\_ctc插件层通过继承handler对MySQL表进行操作。

**表 1**  Cantian Connector接口说明

|函数名|参数说明|描述|
|--|--|--|
|ctc_commit|handlerton（注册的handler实例），thd（MySQL线程），commit_trx（是否提交）|提交事务|
|ctc_rollback|handlerton（注册的handler实例），thd（MySQL线程），commit_trx（是否回滚）|回滚事务|
|ctc_close_connect|handlerton（注册的handler实例），thd（MySQL线程）|断开client连接|
|ctc_kill_connection|handlerton（注册的handler实例），thd（MySQL线程）|kill client连接|
|ctc_notify_exclusive_mdl|thd（MySQL线程）,mdl_key（mdl锁）,notification_type（通知类型）|加mdl锁前通知|
|ctc_set_savepoint|handlerton（注册的handler实例），thd（MySQL线程），savepoint（事务savepoint点）|设置事务回滚点|
|ctc_release_savepoint|handlerton（注册的handler实例），thd（MySQL线程），savepoint（事务savepoint点）|释放事务回滚点|
|ha_ctc::open|name(表名)，mode（打开模式）test_if_locked（是否应在打开前检查表上的锁），table_def（表定义）|打开表|
|ha_ctc::close|不涉及|关闭表|
|ha_ctc::write_row|buf（写入行buf）|写入一行数据|
|ha_ctc::start_bulk_insert|rows批量插入行数|准备批量插入|
|ha_ctc::end_bulk_insert|不涉及|进行批量插入|
|ha_ctc::update_row|old_data（老数据）new_data（新数据）|更新一行|
|ha_ctc::delete_row|数据buf|删除一行|
|ha_ctc::rnd_init|初始化rnd|为表扫描作准备，将计数器和指针复位为表的开始状态|
|ha_ctc::rnd_next|行buf|全表扫描读行|
|ha_ctc::position|不涉及|rnd_next读完后数据排序|
|ha_ctc::rnd_pos|buf读出的数据，pos行信息|根据pos去获取数据|
|ha_ctc::analyze|thd（MySQL线程）|执行analyze统计信息更新|
|ha_ctc::rnd_end|不涉及|全表读完后释放资源|
|ha_ctc::index_init|index（索引序号）sorted（是否有序）|索引读初始化|
|ha_ctc::index_end|不涉及|索引读完后释放资源|
|ha_ctc::index_read|buf（读出的数据），key（传入的索引条件），key_len（长度），find_flag（索引读方式）|索引读|
|index_read_last|buf（读出的数据），key（传入的索引条件），key_len（长度）|使用HA_READ_PREFIX_LAST方式读|
|index_next_same|buf（读出的数据），key（传入的索引条件），key_len（长度）|使用指定的key读取数据|
|index_next|buf（读出的数据）|读取通过index_read确定位置的下一个元素|
|index_prev|buf（读出的数据）|读取通过index_read确定位置的上一个元素|
|index_first|buf（读出的数据）|通过索引读到第一个元素|
|index_last|buf（读出的数据）|通过索引读到最后一个元素|
|delete_all_rows|不涉及|删除所有行数据|
|records_in_range|inx（索引号）min_key（范围开始的key）max_key（范围结束的key）|查找在一个范围内的记录数|
|records|返回记录数|返回表中的记录数|


