documents/24.09/开发指南.md
# SQL语法使用限制<a name="ZH-CN_TOPIC_0000001854778213"></a>

-   Cantian引擎不支持SQL语句：“ALTER INSTANCE“，CREATE/ALTER/DROP EVENT/SERVER/SRS/RESOURCE GROUP，IMPORT table，XA START/BEGIN/END/PREPARE/COMMIT/ROLLBACK/RECOVER。
-   通过SQL语句：“CREATE TABLE  _表名_   DATA DIRECTORY='_数据路径_';”指定表数据路径时不生效。原因是Cantian引擎默认将表数据存放在DBStor。
-   Cantian引擎在集群应用DDL需使用排他锁。因此不支持执行ALTER SQL语句指定“LOCK=NONE“或“LOCK=SHARE“。
-   Cantian引擎不支持在MySQL自带的系统表空间中执行DDL操作，MySQL自带的系统表空间在Cantian引擎中不存在。
-   当用户写数据至MySQL的系统数据库（information\_schema、mysql、performance\_schema、sys）时，需要在集群中所有节点执行写操作，否则集群数据将不一致。原因是MySQL的系统数据库未被Cantian引擎管理。
-   执行“LOCK INSTANCE FOR BACKUP“SQL语句后，所有实例将无法执行DDL。
-   JSON\_VALUE不支持的关键字包括：RETURNING SIGNED、RETURNING UNSIGNED、RETURNING DECIMAL、RETURNING FLOAT、RETURNING DOUBLE、RETURNING DATETIME、RETURNING TIME、RETURNING DATE。
-   Cantian引擎的外键必须建立在主键或者唯一索引之上。
-   单个表最多支持建立32个索引。
-   Cantian引擎仅需要加载ha\_ctc.so，如需加载其他so，请先联系技术支持评估后再加载。

    INSTALL PLUGIN操作仅在单节点有效，若需加载插件在技术支持评估后由管理平台在所有节点上统一加载，避免部分节点加载，部分节点未加载的情况。

-   Cantian引擎不支持FullText字段。
-   Cantian引擎不支持Discard tablespace字段。
-   执行“Create user”SQL语句创建用户后，必须要给该用户赋予\(GRANT\)LOCK权限，才能进行集群DDL操作。创建用户后，用户需要有相应SQL语句的执行权限才可以执行操作。远端执行的Proxy用户在执行SQL语句时会有部分限制，无法执行时系统会报错。
-   Cantian引擎不支持对JSON类型的列创建索引，不支持多值索引（multi-valued indexes）。
-   不允许在非空表中添加非空（NOT NULL）且未指定默认值的列。
-   在数据库表中插入索引数据时，如果索引列默认值为NULL，插入多行数据时，会报重复索引的错误。
-   索引命名长度最大支持64个字节。
-   Cantian引擎不支持降序索引。
-   Cantian引擎索引函数只支持json\_value、lower、upper、reverse、substr和abs。
-   执行FLUSH TABLE WITH READ LOCK全局读锁后，不支持新起会话执行set语句，执行会报错。
-   用户开启事务过程中，设置Cantian引擎的锁超时时间的操作是无效的，事务提交后可以通过语句“set @@CTC\_lock\_wait\_timeout=_锁超时时间\(单位是ms\)_；”正常设置。
-   Cantian引擎的行数据最大支持64000字节。
-   数据库名、表名、索引名最大长度为64字节。
-   分布式数据库自增值不保证单调连续，存在自增值跳变现象。
-   Cantian引擎使用自增主键时，如果显式指定自增值进行插入/更新操作可能会导致数据库集群其他节点后续插入空值时出现重复键值的现象，插件发现冲突后会报错处理。因此，不建议使用指定自增值的插入/更新方式。
-   当前支持的字符集与比较规则如下，对于目前没有处理的字符集，可能会出现特殊字符排序或内容匹配结果不一致：

    utf8mb4 - utf8mb4\_0900\_ai\_ci/utf8mb4\_0900\_bin/utf8mb4\_general\_ci/utf8mb4\_bin

    binary - binary

    latin1 - latin1\_general\_ci/latin1\_general\_cs/latin1\_bin

    ascii - ascii\_general\_ci/ascii\_bin

    gbk - gbk\_chinese\_ci/gbk\_bin

    utf8/utf8mb3 - utf8\_general\_ci/utf8\_bin/utf8mb3\_general\_ci/utf8mb3\_general\_ci

-   Cantian引擎不支持多重故障场景（指集群中叠加出现多个故障）的自动恢复，需要人工介入恢复。
-   Cantian引擎的外键需要建立在数据类型相同的列之上，如果两列数据类型不同，会报列类型不匹配的错误。
-   Cantian引擎不支持对函数索引调用到的列做rename操作。
-   重启其中一个MySQL节点会导致该节点上已修改的MySQL系统变量恢复默认值，而另外一个未重启的节点仍是修改后的值，该现象是MySQL自身的限制，不影响业务功能。
-   数据库下业务期间，不支持修改表结构（修改数据列，删除数据列）
-   当前cantian报错返回了unique键名，并未返回具体的值。

    出现冲突时可以通过查询键对应的列，找到重复值。

    select \* from t1 group by （字段名）having count\(\*\) \> 1;

# Cantian Connector接口说明<a name="ZH-CN_TOPIC_0000001808139372"></a>

ha\_ctc插件层通过继承handler对MySQL表进行操作。

**表 1**  Cantian Connector接口说明

<a name="table122816402532"></a>
<table><thead align="left"><tr id="row1429204055320"><th class="cellrowborder" valign="top" width="16.33%" id="mcps1.2.4.1.1"><p id="p5298408533"><a name="p5298408533"></a><a name="p5298408533"></a>函数名</p>
</th>
<th class="cellrowborder" valign="top" width="55.75%" id="mcps1.2.4.1.2"><p id="p1929194019535"><a name="p1929194019535"></a><a name="p1929194019535"></a>参数说明</p>
</th>
<th class="cellrowborder" valign="top" width="27.92%" id="mcps1.2.4.1.3"><p id="p1557124916518"><a name="p1557124916518"></a><a name="p1557124916518"></a>描述</p>
</th>
</tr>
</thead>
<tbody><tr id="row929174085312"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p1429340115318"><a name="p1429340115318"></a><a name="p1429340115318"></a>tse_commit</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p132934020538"><a name="p132934020538"></a><a name="p132934020538"></a>handlerton（注册的handler实例），thd（MySQL线程），commit_trx（是否提交）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p6571849155119"><a name="p6571849155119"></a><a name="p6571849155119"></a>提交事务</p>
</td>
</tr>
<tr id="row142911407531"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p129114019536"><a name="p129114019536"></a><a name="p129114019536"></a>tse_rollback</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p132954015533"><a name="p132954015533"></a><a name="p132954015533"></a>handlerton（注册的handler实例），thd（MySQL线程），commit_trx（是否回滚）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p1257294917515"><a name="p1257294917515"></a><a name="p1257294917515"></a>回滚事务</p>
</td>
</tr>
<tr id="row1291240195317"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p16178858312"><a name="p16178858312"></a><a name="p16178858312"></a>tse_close_connect</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p152919401535"><a name="p152919401535"></a><a name="p152919401535"></a>handlerton（注册的handler实例），thd（MySQL线程）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p11572949115112"><a name="p11572949115112"></a><a name="p11572949115112"></a>断开client连接</p>
</td>
</tr>
<tr id="row15299408535"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p629940165319"><a name="p629940165319"></a><a name="p629940165319"></a>tse_kill_connection</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p163477491338"><a name="p163477491338"></a><a name="p163477491338"></a>handlerton（注册的handler实例），thd（MySQL线程）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p1357294965118"><a name="p1357294965118"></a><a name="p1357294965118"></a>kill client连接</p>
</td>
</tr>
<tr id="row829154019533"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p02910401535"><a name="p02910401535"></a><a name="p02910401535"></a>tse_notify_exclusive_mdl</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p182917406533"><a name="p182917406533"></a><a name="p182917406533"></a>thd（MySQL线程）,mdl_key（mdl锁）,notification_type（通知类型）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p1257224910515"><a name="p1257224910515"></a><a name="p1257224910515"></a>加mdl锁前通知</p>
</td>
</tr>
<tr id="row3815542141815"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p118159420189"><a name="p118159420189"></a><a name="p118159420189"></a>tse_set_savepoint</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p1522712159198"><a name="p1522712159198"></a><a name="p1522712159198"></a>handlerton（注册的handler实例），thd（MySQL线程），savepoint（事务savepoint点）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p5572194945112"><a name="p5572194945112"></a><a name="p5572194945112"></a>设置事务回滚点</p>
</td>
</tr>
<tr id="row82641533122114"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p1226473302118"><a name="p1226473302118"></a><a name="p1226473302118"></a>tse_release_savepoint</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p10264933162118"><a name="p10264933162118"></a><a name="p10264933162118"></a>handlerton（注册的handler实例），thd（MySQL线程），savepoint（事务savepoint点）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p75721649135112"><a name="p75721649135112"></a><a name="p75721649135112"></a>释放事务回滚点</p>
</td>
</tr>
<tr id="row428152052218"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p72816204223"><a name="p72816204223"></a><a name="p72816204223"></a>ha_tse::open</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p2281720182216"><a name="p2281720182216"></a><a name="p2281720182216"></a>name(表名)，mode（打开模式）test_if_locked（是否应在打开前检查表上的锁），table_def（表定义）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p125721049115115"><a name="p125721049115115"></a><a name="p125721049115115"></a>打开表</p>
</td>
</tr>
<tr id="row1889315152612"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p2894811260"><a name="p2894811260"></a><a name="p2894811260"></a>ha_tse::close</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p10894181192611"><a name="p10894181192611"></a><a name="p10894181192611"></a>不涉及</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p257244914516"><a name="p257244914516"></a><a name="p257244914516"></a>关闭表</p>
</td>
</tr>
<tr id="row47021829134210"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p18702192910423"><a name="p18702192910423"></a><a name="p18702192910423"></a>ha_tse::write_row</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p7791308435"><a name="p7791308435"></a><a name="p7791308435"></a>buf（写入行buf）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p135721549115111"><a name="p135721549115111"></a><a name="p135721549115111"></a>写入一行数据</p>
</td>
</tr>
<tr id="row1464227438"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p8611223437"><a name="p8611223437"></a><a name="p8611223437"></a>ha_tse::start_bulk_insert</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p961522144318"><a name="p961522144318"></a><a name="p961522144318"></a>rows批量插入行数</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p3572249175118"><a name="p3572249175118"></a><a name="p3572249175118"></a>准备批量插入</p>
</td>
</tr>
<tr id="row69130375494"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p89131637184917"><a name="p89131637184917"></a><a name="p89131637184917"></a>ha_tse::end_bulk_insert</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p566382112516"><a name="p566382112516"></a><a name="p566382112516"></a>不涉及</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p175721493519"><a name="p175721493519"></a><a name="p175721493519"></a>进行批量插入</p>
</td>
</tr>
<tr id="row9183217205119"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p418441715117"><a name="p418441715117"></a><a name="p418441715117"></a>ha_tse::update_row</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p5118431154410"><a name="p5118431154410"></a><a name="p5118431154410"></a>old_data（老数据）new_data（新数据）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p19572144920513"><a name="p19572144920513"></a><a name="p19572144920513"></a>更新一行</p>
</td>
</tr>
<tr id="row98790494448"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p48791049134414"><a name="p48791049134414"></a><a name="p48791049134414"></a>ha_tse::delete_row</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p1587974919445"><a name="p1587974919445"></a><a name="p1587974919445"></a>数据buf</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p19879124954413"><a name="p19879124954413"></a><a name="p19879124954413"></a>删除一行</p>
</td>
</tr>
<tr id="row8395161454511"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p11396314114511"><a name="p11396314114511"></a><a name="p11396314114511"></a>ha_tse::rnd_init</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p15396101484515"><a name="p15396101484515"></a><a name="p15396101484515"></a>初始化rnd</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p193968141455"><a name="p193968141455"></a><a name="p193968141455"></a>为表扫描作准备，将计数器和指针复位为表的开始状态</p>
</td>
</tr>
<tr id="row13814101484619"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p19814714174618"><a name="p19814714174618"></a><a name="p19814714174618"></a>ha_tse::rnd_next</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p888163834616"><a name="p888163834616"></a><a name="p888163834616"></a>行buf</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p138142144467"><a name="p138142144467"></a><a name="p138142144467"></a>全表扫描读行</p>
</td>
</tr>
<tr id="row6236144384618"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p1323684311462"><a name="p1323684311462"></a><a name="p1323684311462"></a>ha_tse::position</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p223644344617"><a name="p223644344617"></a><a name="p223644344617"></a>不涉及</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p1123654394611"><a name="p1123654394611"></a><a name="p1123654394611"></a>rnd_next读完后数据排序</p>
</td>
</tr>
<tr id="row1713712794910"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p2013716711492"><a name="p2013716711492"></a><a name="p2013716711492"></a>ha_tse::rnd_pos</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p735236134912"><a name="p735236134912"></a><a name="p735236134912"></a>buf读出的数据，pos行信息</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p1713719717499"><a name="p1713719717499"></a><a name="p1713719717499"></a>根据pos去获取数据</p>
</td>
</tr>
<tr id="row106226175113"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p1962219114514"><a name="p1962219114514"></a><a name="p1962219114514"></a>ha_tse::analyze</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p1862218115112"><a name="p1862218115112"></a><a name="p1862218115112"></a>thd（MySQL线程）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p10622191105114"><a name="p10622191105114"></a><a name="p10622191105114"></a>执行analyze统计信息更新</p>
</td>
</tr>
<tr id="row344617855118"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p1744618895113"><a name="p1744618895113"></a><a name="p1744618895113"></a>ha_tse::rnd_end</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p19446168115120"><a name="p19446168115120"></a><a name="p19446168115120"></a>不涉及</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p1344614815516"><a name="p1344614815516"></a><a name="p1344614815516"></a>全表读完后释放资源</p>
</td>
</tr>
<tr id="row121741713517"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p52176173512"><a name="p52176173512"></a><a name="p52176173512"></a>ha_tse::index_init</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p621741719511"><a name="p621741719511"></a><a name="p621741719511"></a>index（索引序号）sorted（是否有序）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p1621712178516"><a name="p1621712178516"></a><a name="p1621712178516"></a>索引读初始化</p>
</td>
</tr>
<tr id="row13576020165113"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p25761220195110"><a name="p25761220195110"></a><a name="p25761220195110"></a>ha_tse::index_end</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p8871133155720"><a name="p8871133155720"></a><a name="p8871133155720"></a>不涉及</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p757682095116"><a name="p757682095116"></a><a name="p757682095116"></a>索引读完后释放资源</p>
</td>
</tr>
<tr id="row155481223205113"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p18548923145116"><a name="p18548923145116"></a><a name="p18548923145116"></a>ha_tse::index_read</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p1354817233515"><a name="p1354817233515"></a><a name="p1354817233515"></a>buf（读出的数据），key（传入的索引条件），key_len（长度），</p>
<p id="p48763516591"><a name="p48763516591"></a><a name="p48763516591"></a>find_flag（索引读方式）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p154842345115"><a name="p154842345115"></a><a name="p154842345115"></a>索引读</p>
</td>
</tr>
<tr id="row6478427175113"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p19479527165116"><a name="p19479527165116"></a><a name="p19479527165116"></a>index_read_last</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p2479112715111"><a name="p2479112715111"></a><a name="p2479112715111"></a>buf（读出的数据），key（传入的索引条件），key_len（长度）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p647910277516"><a name="p647910277516"></a><a name="p647910277516"></a>使用</p>
<p id="p189613212118"><a name="p189613212118"></a><a name="p189613212118"></a>HA_READ_PREFIX_LAST方式读</p>
</td>
</tr>
<tr id="row19726193316519"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p10726533115120"><a name="p10726533115120"></a><a name="p10726533115120"></a>index_next_same</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p17726193317518"><a name="p17726193317518"></a><a name="p17726193317518"></a>buf（读出的数据），key（传入的索引条件），key_len（长度）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p107267337519"><a name="p107267337519"></a><a name="p107267337519"></a>使用指定的key读取数据</p>
</td>
</tr>
<tr id="row19916103610513"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p5917636165112"><a name="p5917636165112"></a><a name="p5917636165112"></a>index_next</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p39171936135117"><a name="p39171936135117"></a><a name="p39171936135117"></a>buf（读出的数据）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p1991763616514"><a name="p1991763616514"></a><a name="p1991763616514"></a>读取通过index_read确定位置的下一个元素</p>
</td>
</tr>
<tr id="row9757123911514"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p17576398511"><a name="p17576398511"></a><a name="p17576398511"></a>index_prev</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p1474611519157"><a name="p1474611519157"></a><a name="p1474611519157"></a>buf（读出的数据）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p9757939145119"><a name="p9757939145119"></a><a name="p9757939145119"></a>读取通过index_read确定位置的上一个元素</p>
</td>
</tr>
<tr id="row3266104318518"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p1626644318514"><a name="p1626644318514"></a><a name="p1626644318514"></a>index_first</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p68245562112"><a name="p68245562112"></a><a name="p68245562112"></a>buf（读出的数据）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p2266843185119"><a name="p2266843185119"></a><a name="p2266843185119"></a>通过索引读到第一个元素</p>
</td>
</tr>
<tr id="row10735134615510"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p17735246205115"><a name="p17735246205115"></a><a name="p17735246205115"></a>index_last</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p473564635116"><a name="p473564635116"></a><a name="p473564635116"></a>buf（读出的数据）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p1073554611512"><a name="p1073554611512"></a><a name="p1073554611512"></a>通过索引读到最后一个元素</p>
</td>
</tr>
<tr id="row1862554975115"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p1862554965113"><a name="p1862554965113"></a><a name="p1862554965113"></a>delete_all_rows</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p762510491510"><a name="p762510491510"></a><a name="p762510491510"></a>不涉及</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p46259498516"><a name="p46259498516"></a><a name="p46259498516"></a>删除所有行数据</p>
</td>
</tr>
<tr id="row532510539519"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p1332595319516"><a name="p1332595319516"></a><a name="p1332595319516"></a>records_in_range</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p163251053185112"><a name="p163251053185112"></a><a name="p163251053185112"></a>inx（索引号）min_key（范围开始的key）max_key（范围结束的key）</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p1532515325116"><a name="p1532515325116"></a><a name="p1532515325116"></a>查找在一个范围内的记录数</p>
</td>
</tr>
<tr id="row89505615116"><td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.2.4.1.1 "><p id="p18952562512"><a name="p18952562512"></a><a name="p18952562512"></a>records</p>
</td>
<td class="cellrowborder" valign="top" width="55.75%" headers="mcps1.2.4.1.2 "><p id="p095195635113"><a name="p095195635113"></a><a name="p095195635113"></a>返回记录数</p>
</td>
<td class="cellrowborder" valign="top" width="27.92%" headers="mcps1.2.4.1.3 "><p id="p1495556115115"><a name="p1495556115115"></a><a name="p1495556115115"></a>返回表中的记录数</p>
</td>
</tr>
</tbody>
</table>

# 案例集<a name="ZH-CN_TOPIC_0000001944250680"></a>

3. 1 给列加unique约束失败时，返回列名而不是重复的值。

**现象描述<a name="zh-cn_topic_0000001835265609_section6611101032815"></a>**

当前cantian报错返回了unique键名，并未返回具体的值。

```
mysql> create table t1 (a int);
Query OK, 0 rows affected (0.02 sec)

mysql> insert into t1 values (1), (1), (2), (3), (3);
Query OK, 5 rows affected (0.01 sec)
Records: 5 Duplicates: 0 Warnings: 0

mysql> alter table t1 add unique(a);
ERROR 1062 (23000): Duplicate entry for key 't1.a'
```

**原因<a name="zh-cn_topic_0000001835265609_section16994515102817"></a>**

cantian当前实现为获取到冲突值直接返回当前的键信息，需要在比较函数里面取到每次匹配的值，拼接起来，当前实现代码量大.

**问题影响<a name="zh-cn_topic_0000001835265609_section13517132562812"></a>**

得到第一个冲突值的便捷性。

**规避方案<a name="section8384251161311"></a>**

出现冲突时可以通过查询键对应的列，找到重复值。

select \* from t1 group by （字段名）having count\(\*\) \> 1

```
mysql> select * from t1 group by a having count(*) > 1;
+------+
| a    |
+------+
|    1 |
|    3 |
+------+
2 row2 in set (0.01 sec)
```

